--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -17,7 +17,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/poppins_medium"
-        android:text="@string/addnote"
+        android:text="@string/add_task"
         android:textColor="@color/orange"
         android:textSize="24sp" />
 
